infra/k8s/api_service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
        - name: api-service
          image: jfelipef/api-service
---
apiVersion: v1
kind: Service
metadata:
  name: api-service-srv
spec:
  selector:
    app: api-service
  ports:
    - name: api-service
      protocol: TCP
      port: 5555
      targetPort: 5555
